cmake_minimum_required(VERSION 3.10)

PROJECT(bitcoin)

set(_CLIENT_VERSION_MAJOR, 0)
set(_CLIENT_VERSION_MINOR, 16)
set(_CLIENT_VERSION_REVISION, 99)
set(_CLIENT_VERSION_BUILD, 0)
set(_CLIENT_VERSION_IS_RELEASE, false)
set(_COPYRIGHT_YEAR, 2018)

INCLUDE_DIRECTORIES(
    ${PROJECT_BINARY_DIR}/src
    ${PROJECT_BINARY_DIR}/src/secp256k1/include
    ${PROJECT_BINARY_DIR}/src/univalue/include
)

LINK_DIRECTORIES(
    ${PROJECT_BINARY_DIR}/lib
)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(test)
